--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Web 2 App</string>
+    <string name="app_name">Web 2 Android</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="button_ok">OK</string>
